--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Cargo.lock
 workspace.xml
 
 go/pkg/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
